--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#sx7phist">SX7P</a></li>
-								<li><a href="#blueangels">P/E</a></li>
-								<li><a href="#epsvsprice">EPS</a></li>
-								<li><a href="#intro">Global</a></li>	
+								
+								<li><a href="#blueangels">SX7P Valuation</a></li>
+								<li><a href="#epsvsprice">EPS Momentum </a></li>
+								    <li><a href="#mktcap"> Market Caps </a></li>	
 							</ul>
 						</nav>
 					</header>
@@ -37,13 +37,13 @@
 				<!-- Main -->
 					<div id="main">
 						<!-- Intro -->
-							<article id="intro">
+							<article id="mktcap">
 									<iframe id="inlineFrameExample"
 									title="Inline Frame Example"
-									width="1030"
+									width="1325"
 									height="1230"
 									style="border:5px solid rgb(0, 0, 0);"
-									src="plotlyfiles/performance.html">
+									src="plotlyfiles/market_cap_bubble_chart.html">
 									</iframe>
 							</article>
 						<!-- Blue Angels -->
@@ -60,7 +60,7 @@
 						<article id="epsvsprice">
 							<iframe id="inlineFrameExample"
 							title="Inline Frame Example"
-							width="1230"
+							width="1330"
 							height="830"
 							style="border:5px solid rgb(0, 0, 0);"
 							src="plotlyfiles/EPS_vs_Price.html">
