--- a/index.html
+++ b/index.html
@@ -21,15 +21,17 @@
 							<div class="inner">
 								<h1>EU Banks - A Visual Guide</h1>
 								<p>This site is updated on a regular basis and shows 
-									key metrics to pay attention to before investing in shares of European banks</p>
+									how EU banks trade, why EPS momentum matters,
+								and how European banks fit within a global context</p>
 							</div>
 						</div>
 						<nav>
 							<ul>
 								
-								<li><a href="#blueangels">SX7P Valuation</a></li>
-								<li><a href="#epsvsprice">EPS Momentum </a></li>
-								    <li><a href="#mktcap"> Market Caps </a></li>	
+								<li><a href="#mktcap"> Market Cap</a></li>
+								<li><a href="#epsvsprice">EPS Momentum</a></li>
+								<li><a href="#blueangels">Valuation</a></li>
+								   	
 							</ul>
 						</nav>
 					</header>
