--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
 							<div class="inner">
 								<h1>EU Banks - A Visual Guide</h1>
 								<p>This site is updated on a regular basis and shows 
-									how EU banks trade, why EPS momentum matters,
-								and how European banks fit within a global context</p>
+									how European banks have become very small in a global context,
+									why EPS momentum still matters for stock prices, and 
+									how to trade the sector based on valuation ranges.
+								</p>
 							</div>
 						</div>
 						<nav>
